# ai_engineering_handbook

./: .aider.conf.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  LICENSE  README.ipynb  README.md  RELEASE_NOTES.ipynb  RELEASE_NOTES.md  aider.CONVENTIONS  draft  myst.yml  pyproject.toml
.github/workflows/: check-links-test.yml  deploy.yml  jupytext-sync-validate.yml  quality.yml
.vadocs/: README.md  conf.json  conf.schema.json  conf.yaml
.vadocs/inventory/: manage_external_repos.json
.vadocs/types/: adr.conf.json  evidence.conf.json
.vadocs/validation/: external-repos.conf.json  external-repos.conf.schema.json
0_intro/: 00_onboarding.ipynb  00_onboarding.md  a_multi_layered_ai_system_architecture.ipynb  a_multi_layered_ai_system_architecture.md  ai_further_reading.ipynb  ai_further_reading.md  ai_systems_grounding_in_computing_disciplines.ipynb  ai_systems_grounding_in_computing_disciplines.md  ai_systems_multilayer_approach.ipynb  ai_systems_multilayer_approach.md
0_intro/requirements_engineering/: appendices_for_requirements_engineering_in_the_ai_era.md
1_execution/: algebra_gemm_engineering_standard.ipynb  algebra_gemm_engineering_standard.md  hybrid_execution_and_kv_cache_offloading.md  optimization_fpga_asic_hardware_acceleration_for_ai.ipynb  optimization_nvidia_gpu_cuda_nsight_and_systems_thinking.md
2_model/selection/: README.md  choosing_model_size.ipynb  choosing_model_size.md  models_list.ipynb  models_list.md
2_model/training/: embeddings_for_small_llms.md
4_orchestration/patterns/: llm_usage_patterns.ipynb  llm_usage_patterns.md
ai_agents/: README.md
ai_agents/agent_architecture/: how_subagents_work.ipynb  how_subagents_work.md  stability_against_llm_drift.ipynb  stability_against_llm_drift.md
ai_agents/architecture/: agent_governance_model.md
ai_agents/context_management/: compaction_api_contract.ipynb  compaction_api_contract.md  (+3 more)
ai_system_layers/: README.md
architecture/: adr_index.md  architecture.config.yaml  architecture_decision_workflow_guide.md  manifesto.md  what_is_an_adr.md
helpers/: md_check_broken_links.py
in_progress/: draft.md
misc/: insights.md  plan.md  tmp.md  todo.md
mlops/: production_git_workflow_standards.md
pr/: README.md
tools/: nbdiff_git_diff_for_jupyter_notebooks_version_control.md
(+722 files in other folders)
