[project]
name = "ai-engineering-book"
version = "0.1.0"
description = "AI-engineered knowledge base from SovIAR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.2.0",
    "ansible-core>=2.20.1",
    "jupytext>=1.19.0",
    "mystmd>=1.8.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.jupytext]
formats = "ipynb,md:myst"
