[project]
name = "ai-engineering-book"
version = "0.1.0"
description = "AI-engineered knowledge base from SovIAR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.2.0",
    "ansible-core>=2.20.1",
    "jupytext>=1.19.0",
    "mystmd>=1.8.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.jupytext]
formats = "ipynb,md:myst"

# Conventional Commits convention for this repository.
# Source of truth for commit types, CHANGELOG section mapping, and ArchTag rules.
# Consumed by: tools/scripts/validate_commit_msg.py, tools/scripts/generate_changelog.py
# Defined in: tools/docs/git/01_production_git_workflow_standards.md
# Decision record: architecture/adr/adr_26029_pyproject_toml_as_tool_config_hub.md
[tool.commit-convention]
valid-types = ["feat", "fix", "docs", "adr", "ci", "refactor", "perf", "chore", "pr"]
archtag-required-types = ["refactor", "perf"]
changelog-exclude-patterns = ["CLAUDE.md", "aider", "misc/", "jupytext sync"]

[tool.commit-convention.changelog-sections]
# Key order defines CHANGELOG section ordering
feat = "New Features"
fix = "Bug Fixes"
docs = "Documentation"
adr = "Architectural Decisions"
ci = "CI/CD & Quality"
chore = "Maintenance"
refactor = "Refactoring"
perf = "Performance"
pr = "Public Relations"

# Config pointer registry (ADR-26036) — scripts resolve their config path from here.
# Consumed by: tools/scripts/check_adr.py (after migration to pointer-based loading)
[tool.check-adr]
config = "architecture/adr/adr_config.yaml"

# Consumed by: tools/scripts/check_evidence.py
[tool.check-evidence]
config = "architecture/evidence/evidence.config.yaml"
